# prosty-raytracer-rs

./: .gitignore  Cargo.toml  readme.md
imgs/: img2
src/: main.rs
