[package]
name = "yapt_rs"
version = "0.1.0"
authors = ["JakubJaszczuk <238556@student.pwr.edu.pl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.21.0"
rand = "0.7.3"
num_cpus = "1.13.0"
crossbeam = "0.7.3"

[profile.release]
opt-level = 3
lto = true
debug = false

[features]
RANDOM = []
